@@ -2,7 +2,6 @@ package lispa.schedulers.dao.target;
 
 import java.sql.Connection;
 import java.sql.SQLException;
-import java.sql.Timestamp;
 import java.util.LinkedList;
 import java.util.List;
 
@@ -22,7 +21,7 @@ import com.mysema.query.types.Projections;
 
 public class ClassificatoreOdsDAO {
 
-
+	ClassificatoreOdsDAO(){}
 	private static SQLTemplates dialect = new HSQLDBTemplates();
 
 	private static QDmalmClassificatoreOds ods = QDmalmClassificatoreOds.dmalmClassificatore;
@@ -53,8 +52,7 @@ public class ClassificatoreOdsDAO {
 
 	}
 
-	public static void insert(List<DmalmClassificatore> stg,
-			Timestamp dataEsecuzione) throws DAOException, SQLException {
+	public static void insert(List<DmalmClassificatore> stg) throws DAOException, SQLException {
 
 		ConnectionManager cm = null;
 		Connection connection = null;
@@ -68,7 +66,6 @@ public class ClassificatoreOdsDAO {
 			for (DmalmClassificatore classificatore : stg) {
 
 				new SQLInsertClause(connection, dialect, ods)
-
 						.columns(ods.cd_classificatore, ods.cf_ambito,
 								ods.cf_area, ods.cf_riferimenti,
 								ods.cf_scheda_servizio,
@@ -113,7 +110,7 @@ public class ClassificatoreOdsDAO {
 								classificatore.getDtModificaClassif(),
 								classificatore.getIdAutoreClassificatore(),
 								classificatore.getIdRepository(),
-								new Double(1),
+								Double.valueOf(1),
 								classificatore.getRankStatoClassifMese(),
 								classificatore.getStgPk(),
 								classificatore.getTitoloClassificatore(),
@@ -133,8 +130,6 @@ public class ClassificatoreOdsDAO {
 
 		} catch (Exception e) {
 			ErrorManager.getInstance().exceptionOccurred(true, e);
-
-			e.printStackTrace();
 			throw new DAOException(e);
 		} finally {
 			if (cm != null)
@@ -209,8 +204,6 @@ public class ClassificatoreOdsDAO {
 
 		} catch (Exception e) {
 			ErrorManager.getInstance().exceptionOccurred(true, e);
-
-			e.printStackTrace();
 			throw new DAOException(e);
 		} finally {
 			if (cm != null)
